# Wolf

./: CMakeLists.txt  README.md
include/: ast.h  compiler.h  lexer.h  parser.h
include/AST/: AST.h  ASTNode.h  ASTPrinter.h  ASTVisitor.h
include/AST/Nodes/: AllNodes.h  AssignmentNode.h  BinaryExprNode.h  BlockNode.h  BootLiteralNode.h  CharLiteralNode.h  ElseNode.h  FloatLiteralNode.h  IdentifierNode.h  IfNode.h  IntLiteralNode.h  NullLiteralNode.h  ProgramNode.h  StringLiteralNode.h  UnaryExprNode.h  VariableDeclNode.h  VariableInitNode.h
include/Lexer/: Lexer.h  StateToken.h  Token.h
include/Parser/: ParseError.h  Parser.h  Scope.h  Symbol.h
include/ast/: AST.h  ASTNode.h  ASTPrinter.h  ASTVisitor.h
include/ast/nodes/: AllNodes.h  AssignmentNode.h  BinaryExprNode.h  BlockNode.h  BootLiteralNode.h  CharLiteralNode.h  Declarations.h  ElseNode.h  Expressions.h  FloatLiteralNode.h  IdentifierNode.h  IfNode.h  IntLiteralNode.h  Literals.h  NullLiteralNode.h  ProgramNode.h  Statements.h  StringLiteralNode.h  UnaryExprNode.h  VariableDeclNode.h  VariableInitNode.h
include/parser/: Lexer.h  ParseError.h  Parser.h  StateToken.h  Token.h
include/utils/: Diagnostics.h  resources.h
src/: ast.cpp  idk how to name this file  idk how to name this file.txt  idk who to name this file  main.cpp
src/AST/: ASTPrinter.cpp
src/Lexer/: Lexer.cpp
src/Parser/: Lexer.cpp  Parser.cpp  Token.cpp
src/ast/: ASTNode.cpp  ASTPrinter.cpp
src/ast/nodes/: Declarations.cpp  Expressions.cpp  Literals.cpp  Statements.cpp
test/: OldVersionLexer.txt  OldVersionParser.txt
